Direct injection of collectors and try-catch in SearchDatasetsQuery